--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,9 @@
     font-family: Helvetica, Arial, sans-serif;
     --text-primary: black;
     --text-secondary: white;
-    --transition-speed: 0.5s;
     --dashboard-colour: #0EA5E9;
     --background-colour: #CBD5E1;
     --content-highlight: #F59E0B;
-    --dashboard-width: clamp(200px, 25vw, 350px);
     --github-avatar: url("https://github.com/Superjim.png");
     --github-avatar-2: url("https://github.com/hmjatt.png");
     --github-avatar-3: url("https://github.com/IlyaEru.png");
@@ -30,24 +28,157 @@ body {
 .dashboard {
     grid-area: dashboard;
     background-color: var(--dashboard-colour);
-    width: 15rem;
+    width: 17rem;
     overflow: hidden;
+    font-size: 1.2rem;
+    font-weight: 600;
     
+}
+
+.item:first-child {
+    font-size: 2rem;
+    margin-left: 1.175rem;
+    margin-top: 1.175rem;
+    padding-bottom: 2rem;
+
+}
+
+.item:nth-child(8) {
+    margin-top: 2rem;
 }
 
 .item {
     color: var(--text-secondary);
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items:center;
     justify-content: flex-start;
+    margin-left: 1.5rem;
 }
+
+.item > h2 {
+    margin: 1rem;
+}
+
+.item:first-child > h2 {
+    margin: 0.675rem;
+}
+
+/* Navbar */
 
 .navbar {
     grid-area: navbar;
+    padding: 1rem 3rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+
+}
+
+.top-navbar, .bottom-navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5rem;
+
+}
+
+.search, .alerts {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+#searchbar {
+    border: none;
+    border-radius: 1rem;
+    height: 1.5rem;
+    width: 40vw;
+    margin-left: 1rem;
+    outline: 0;
+    background-color: var(--background-colour)
+
+}
+
+/* Github avatar */
+
+.github-avatar {
+    background: var(--github-avatar) center center / cover no-repeat;
+    border-radius: 50%;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    height: 2.5rem;
+    width: 2.5rem;
 }
 
 .content {
     grid-area: conten;
 }
 
+/* Navbar bottom */
+
+.user {
+    display: flex;
+    margin-top: 1rem;
+    font-weight: 600;
+
+}
+
+.user > .github-avatar {
+    height: 4rem;
+    width: 4rem;
+    margin-left: 0;
+}
+
+.user-profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.user-profile > .greeting {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.button-container {
+    margin-top: 2rem;
+}
+
+.button-container > * {
+  align-items: center;
+  background-color: var(--dashboard-colour);
+  border: none;
+  border-radius: 5rem;
+  box-sizing: border-box;
+  color: var(--text-secondary);
+  cursor: pointer;
+  display: inline-flex;
+  font-size: 1rem;
+  font-weight: 600;
+  justify-content: center;
+  min-height: 2rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  text-align: center;
+  touch-action: manipulation;
+  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  vertical-align: middle;
+}
+
+.button-18:hover,
+.button-18:focus { 
+  background-color: #16437E;
+  color: #ffffff;
+}
+
+.button-18:active {
+  background: #09223b;
+  color: rgb(255, 255, 255, .7);
+}
+
+.button-18:disabled { 
+  cursor: not-allowed;
+  background: rgba(0, 0, 0, .08);
+  color: rgba(0, 0, 0, .3);
+}
